# vexor-project-barcelona

./: .gitignore  .gitmodules  CLAUDE.md  CosasQueSePodríanPonerPeroNoHayTiempo.txt  README.md  demo_lead.csv  intro.txt  notion-the-last-human-industry.md  samples.7z  startup.sh  todo.md
backend/: .env.example  garcia.pedro.txt  garciapedro.txt  pedro.garcia.txt  pedrogarcia.txt  pgarcia.txt  pyproject.toml  sample_case.json
backend/app/: cli.py  config.py  main.py  models.py
backend/app/enrichment/: gaia_enrichment.py  google_maps_reviews.py  image_store.py  instagram.py  jooble.py  linkedin.py  mask_matching.py  nosint.py  platform_check.py  reverse_image.py  twitter.py  vision.py  wallapop.py
backend/app/pipeline/: audit.py  base.py  cache.py  llm_summary.py  runner.py  synthesis.py
backend/app/services/: __init__.py  catastro.py  geocoding.py  mitma.py  property_estimate.py  serpavi.py
backend/data/: mitma_valor_tasado_T4_2025.csv  serpavi_alquiler_municipios_2024.csv  serpavi_alquiler_municipios_2024.json
backend/docs/: signals-refactor.md
backend/logs/C001/: 20260415T212937Z.json  20260416T005631Z.json  20260416T053359Z.json  20260416T054959Z.json  20260416T055118Z.json  20260416T055325Z.json  20260416T055453Z.json  20260416T055736Z.json  20260416T055909Z.json  20260416T060220Z.json  20260416T060954Z.json  20260416T061057Z.json  20260416T061341Z.json  20260416T074130Z.json
backend/logs/C002/: 20260415T210826Z.json  20260415T220918Z.json  20260415T231453Z.json
backend/logs/C003/: 20260415T233043Z.json  20260415T233444Z.json  20260415T233548Z.json
backend/logs/C004/: 20260416T030206Z.json
backend/logs/DEMO-001/: 20260416T065048Z.json
backend/logs/alen_tadevosyan/: 20260416T091957Z.json  20260416T092916Z.json
backend/logs/angel_otero/: 20260416T082946Z.json
backend/logs/api-key-test/: 20260416T074927Z.json
backend/logs/e2e-test/: 20260416T070303Z.json
backend/logs/final-test/: 20260416T081622Z.json
backend/logs/full-verify-test/: 20260416T074350Z.json
backend/tests/: test_api_docs.py  test_module_property.py  test_services_catastro.py  test_services_mitma.py  test_services_serpavi.py
(+475 files in other folders)
