[project]
name = "barcelona"
version = "0.1.0"
description = "Vexor × Project Europe Barcelona — debtor enrichment agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
