[project]
name = "barcelona"
version = "0.1.0"
description = "Vexor × Project Europe Barcelona — debtor enrichment agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "exa-py>=1.0",
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
    "twscrape>=0.14",
]

[project.scripts]
enrich = "app.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
